--- a/martinator-api/appsettings.json
+++ b/martinator-api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=db.sqlite"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
