--- a/martinator-api/appsettings.json
+++ b/martinator-api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=db.sqlite"
+    "DefaultConnection": "Host=db;Username=postgres;Password=test"
   },
   "Logging": {
     "LogLevel": {
