--- a/compose.migrations.yml
+++ b/compose.migrations.yml
@@ -3,13 +3,18 @@ services:
     build: martinator-api
     ports:
       - 8080:8080
-    restart: always
+    depends_on:
+      - db
+
+  migrations:
+    build:
+      context: martinator-api
+      dockerfile: migrations.Dockerfile
     depends_on:
       - db
 
   db:
     image: postgres
-    restart: always
     environment:
       POSTGRES_PASSWORD: test
     volumes:
