--- a/compose.development.yml
+++ b/compose.development.yml
@@ -19,6 +19,8 @@ services:
     image: postgres
     environment:
       POSTGRES_PASSWORD: test
+    ports:
+      - 5432:5432
     volumes:
       - pgdata:/var/lib/postgresql/data
 
